# icyFlow2

./: AwesomeObjectFactory.h  CMakeLists.txt  README.md  SimpleObjectPool.h  backgroundworker.cpp  backgroundworker.h  beamparams.cpp  beamparams.h  csrdictionary.cpp  csrdictionary.h  cz.cpp  cz.h  element.h  face.cpp  frameinfo.cpp  frameinfo.h  implicitmodel4.cpp  implicitmodel4.h  linearsystem.cpp  linearsystem.h  main.cpp  main_nogui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.h  meshcollection.cpp  meshcollection.h  modelprms.cpp  modelprms.h  objectpropertybrowser.cpp  objectpropertybrowser.h  surfacefragment.cpp  surfacefragment.h  translation.cpp  translation.h  untitled.geo  untitled.geo.opt  untitled.msh
generator/: beamparams.h  czinsertiontool.cpp  czinsertiontool.h  generatortool.cpp  generatortool.h
geometry/: cz.cpp  cz.h  element.cpp  element.h  face.cpp  face.h  mesh.cpp  mesh.h  meshcollection.cpp  meshcollection.h  node.cpp  node.h  surfacefragment.cpp  surfacefragment.h  translation.cpp  translation.h
simulation/: GteSymmetricEigensolver3x3.h  bvht.cpp  bvht.h  csrdictionary.cpp  csrdictionary.h  frameinfo.cpp  frameinfo.h  implicitmodel4.cpp  implicitmodel4.h  linearsystem.cpp  linearsystem.h  modelprms.cpp  modelprms.h  numbercrunching.cpp  numbercrunching.h  pardiso_wrapper.cpp  point_triangle_distance.cpp
simulation/bvh/: bvhn.cpp  bvhn.h  bvht.cpp  bvht.h  kdop24.cpp  kdop24.h
